--- a/templates/base.html
+++ b/templates/base.html
@@ -23,14 +23,8 @@
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
                 <a class="navbar-brand" href= {% url "inicio" %}>Inicio</a>
-                {% comment %} <a class="btn btn-primary" href= {% url "alquiler_paleta" %} >Paletas</a>
-                <a class="btn btn-primary" href= {% url "alquilar_canchas" %} >Canchas</a>
-                <a class="btn btn-primary" href= {% url "alquilar_pelotitas" %} >Pelotitas</a>
-                <a class="btn btn-primary" href= {% url "estudiando" %} >ALQUILADO</a> {% endcomment %}
-
-                {% comment %} <a class="btn btn-primary" href= {% url "paletas/alquilar" %} >x</a>
-                <a class="btn btn-primary" href= {% url "canchas" %} >x2</a>
-                <a class="btn btn-primary" href= {% url "pelotitas" %} >x3</a> {% endcomment %}
+                <a class="btn btn-primary" href= {% url "languages" %} >Languages</a>
+                <a class="btn btn-primary" href= {% url "frameworks" %} >Frameworks</a>
             </div>
         </nav>
         <!-- Masthead-->
@@ -55,7 +49,6 @@
         <div>
             {% block main %}
             {% endblock main %}
-
         </div>
         <!-- Footer-->
         <footer class="footer bg-light">
@@ -63,9 +56,9 @@
                 <div class="row">
                     <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
                         <ul class="list-inline mb-2">
-                            <li class="list-inline-item"><a href="#!">About</a></li>
+                            <li class="list-inline-item"><a href={% url "about" %}>About</a></li>
                             <li class="list-inline-item">⋅</li>
-                            <li class="list-inline-item"><a href="#!">Contact</a></li>
+                            <li class="list-inline-item"><a href={% url "contact" %}>Contact</a></li>
                             <li class="list-inline-item">⋅</li>
                         </ul>
                         <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2023. All Rights Reserved.</p>
