--- a/Proyecto4/templates/inicio/Frameworks.html
+++ b/Proyecto4/templates/inicio/Frameworks.html
@@ -1,7 +1,13 @@
+{% extends "base.html" %}
+
 {% block title_header %} 
 <title>Frameworks</title>
 {% endblock title_header %}
 
 {% block h1_header %}
-Frameworks
+<form action="" method="POST">
+    {% csrf_token %}
+    {{formulario}}
+    <input type="submit" value="Crear">
+    </form>
 {% endblock h1_header %}
