--- a/Proyecto4/templates/inicio/inicio.html
+++ b/Proyecto4/templates/inicio/inicio.html
@@ -10,3 +10,7 @@
 <br>
 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti ab, asperiores odio veniam sit ex quaerat, cumque quo saepe reiciendis minus cum fugiat! Perspiciatis sed adipisci vero, obcaecati magni asperiores!</p>
 {% endblock h1_header %}
+
+{% block main %}
+{{listadoL}}
+{% endblock main %}
