--- a/Proyecto4/templates/inicio/Languages.html
+++ b/Proyecto4/templates/inicio/Languages.html
@@ -19,7 +19,7 @@ Languages
 <ul>
 {% if languages %}
     {% for language in languages %}
-    <li>{{language}}</li> 
+    <li>{{language}} <a href={% url "ActualizarLanguage" language.id %}>Actualizar</a> | <a href={% url "eliminarLanguage" language.id %}>Eliminar</a>|</li> 
     {% endfor %}
 </ul>
 {% else %}
