--- a/Proyecto4/templates/inicio/ActualizarFrameworks.html
+++ b/Proyecto4/templates/inicio/ActualizarFrameworks.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title_header %} 
-<title>Actualizar Language</title>
+<title>Actualizar Framework</title>
 {% endblock title_header %}
 
 {% block h1_header %}
