new app navegadoresWebs

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
                 <a class="btn btn-primary" href= {% url "CreacionFrameworks" %} >Crear Framework</a>
                 <a class="btn btn-primary" href= {% url "languages" %} >Languages</a>
                 <a class="btn btn-primary" href= {% url "frameworks" %} >Frameworks</a>
+                <a class="btn btn-primary" href= {% url "navegadores" %} >Navegadores</a>
             </div>
         </nav>
         <!-- Masthead-->
