complete model con views de class

--- a/Proyecto4/templates/inicio/Frameworks.html
+++ b/Proyecto4/templates/inicio/Frameworks.html
@@ -11,6 +11,8 @@ Frameworks
 
 {% block main %}
 
+<a href={% url "CreacionFrameworks" %}> Crear nuevo Framework</a>
+
 <form action="">
     <input type="text" name='nombre'>
     <input type="submit" value="Buscar">
