--- a/Proyecto4/templates/inicio/Languages.html
+++ b/Proyecto4/templates/inicio/Languages.html
@@ -11,6 +11,8 @@ Languages
 
 {% block main %}
 
+<a href={% url "CreacionLanguages" %}> Crear nuevo Languages</a>
+
 <form action="">
     {{busqueda}}
     <input type="submit" value="Buscar">
