--- a/Proyecto4/templates/inicio/Frameworks.html
+++ b/Proyecto4/templates/inicio/Frameworks.html
@@ -14,6 +14,7 @@ Frameworks
 <a href={% url "CreacionFrameworks" %}> Crear nuevo Framework</a>
 
 <form action="">
+    <strong>Nombre:</strong>
     <input type="text" name='nombre'>
     <input type="submit" value="Buscar">
 </form>
@@ -21,7 +22,7 @@ Frameworks
 <ul>
 {% if frameworks %}
     {% for framework in frameworks %}
-    <li>{{framework}} <a href={% url "ActualizarFramework" framework.id %}>Actualizar</a> || <a href={% url "eliminarFramework" framework.id %}>Eliminar</a>||
+    <li><strong>Nombre =</strong> {{framework}} <a href={% url "ActualizarFramework" framework.id %}>Actualizar</a> || <a href={% url "eliminarFramework" framework.id %}>Eliminar</a>||
     <a href={% url "DetalleFramework" framework.id%}>Ver mas...</a></li> 
     {% endfor %} 
 
