--- a/navegadoresWebs/templates/navegadores/creacionNavegadores.html
+++ b/navegadoresWebs/templates/navegadores/creacionNavegadores.html
@@ -4,6 +4,10 @@
 <title>Crear Navegador</title>
 {% endblock title_header %}
 
+{% block h1_header %}
+Crear Navegadores
+{% endblock h1_header %}
+
 {% block main %}
 <form action="" method="POST">
     {% csrf_token %}
