--- a/navegadoresWebs/templates/navegadores/detalleNavegadores.html
+++ b/navegadoresWebs/templates/navegadores/detalleNavegadores.html
@@ -5,7 +5,7 @@
 {% endblock title_header %}
 
 {% block h1_header %}
-Navegadores {{navegador.nombre}}
+Navegadore {{navegador.nombre}}
 {% endblock h1_header %}
 
 
