--- a/navegadoresWebs/templates/navegadores/eliminarNavegadores.html
+++ b/navegadoresWebs/templates/navegadores/eliminarNavegadores.html
@@ -4,6 +4,10 @@
 <title>Eliminar Navegador</title>
 {% endblock title_header %}
 
+{% block h1_header %}
+Eliminar??
+{% endblock h1_header %}
+
 {% block main %}
 <form action="" method="POST">
     {% csrf_token %}
