--- a/navegadoresWebs/templates/navegadores/navegadores.html
+++ b/navegadoresWebs/templates/navegadores/navegadores.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
 {% block title_header %} 
-<title>navegadores</title>
+<title>Navegadores</title>
 {% endblock title_header %}
 
 {% block h1_header %}
-navegadores
+Navegadores
 {% endblock h1_header %}
 
 
