--- a/Proyecto4/templates/inicio/Languages.html
+++ b/Proyecto4/templates/inicio/Languages.html
@@ -14,14 +14,14 @@ Languages
 <a href={% url "CreacionLanguages" %}> Crear nuevo Languages</a>
 
 <form action="">
-    {{busqueda}}
+   <strong>{{busqueda}}</strong> 
     <input type="submit" value="Buscar">
 </form>
 
 <ul>
 {% if languages %}
     {% for language in languages %}
-    <li>{{language}} <a href={% url "ActualizarLanguage" language.id %}>Actualizar</a> | <a href={% url "eliminarLanguage" language.id %}>Eliminar</a>| <a href={% url "DetalleLanguage" language.id%}>Ver mas...</a></li> 
+    <li><strong>Nombre =</strong>{{language}} <a href={% url "ActualizarLanguage" language.id %}>Actualizar</a> | <a href={% url "eliminarLanguage" language.id %}>Eliminar</a>| <a href={% url "DetalleLanguage" language.id%}>Ver mas...</a></li> 
     {% endfor %}
 </ul>
 {% else %}
