--- a/Proyecto4/templates/inicio/CreacionFrameworks.html
+++ b/Proyecto4/templates/inicio/CreacionFrameworks.html
@@ -11,7 +11,7 @@ Crear Framework
 {% block main %}
 <form action="" method="POST">
     {% csrf_token %}
-    {{formularioFf}}
+    <table>{{formularioFf}}</table>
     <input type="submit" value="Crear">
     </form>
 {% endblock main %}
