--- a/navegadoresWebs/templates/navegadores/creacionNavegadores.html
+++ b/navegadoresWebs/templates/navegadores/creacionNavegadores.html
@@ -11,7 +11,7 @@ Crear Navegadores
 {% block main %}
 <form action="" method="POST">
     {% csrf_token %}
-    {{form}}
+   <table>{{form}}</table> 
     <input type="submit" value="Crear">
     </form>
 {% endblock main %}
