--- a/navegadoresWebs/templates/navegadores/actualizarNavegadores.html
+++ b/navegadoresWebs/templates/navegadores/actualizarNavegadores.html
@@ -11,7 +11,7 @@ Actualizar Navegadores
 {% block main %}
 <form action="" method="POST">
     {% csrf_token %}
-    {{form}}
+    <table>{{form}}</table>
     <input type="submit" value="Actualizar">
     </form>
 {% endblock main %}
