--- a/Proyecto4/templates/inicio/About.html
+++ b/Proyecto4/templates/inicio/About.html
@@ -5,11 +5,14 @@
 {% endblock title_header %}
 
 {% block h1_header %}
-About Santiago
+About
 {% endblock h1_header %}
 
 {% block main %}
-<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio exercitationem tempore reiciendis. Doloremque est error fugit at saepe minus necessitatibus labore dolorem distinctio enim, natus cum ex harum. Cumque, alias.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam natus aut, enim similique officia id beatae quisquam, mollitia aliquid blanditiis nisi qui cumque sint, temporibus repudiandae maiores nulla atque provident.</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique temporibus fuga pariatur asperiores harum magni commodi dicta excepturi quos recusandae saepe explicabo illo perspiciatis animi ducimus qui ipsum, repellat tempora!</p>
+<p> Somos una empresa comprometida con la excelencia y la innovación. Nuestra misión es proporcionar soluciones de alta calidad a nuestros clientes.
+    En nuestro equipo, valoramos la creatividad y la colaboración. Trabajamos juntos para superar desafíos y alcanzar metas comunes.
+    Fundada en 20XX, nuestra empresa ha crecido y evolucionado, pero nuestro compromiso con la satisfacción del cliente sigue siendo nuestra máxima prioridad.
+    Nos enorgullece ofrecer productos y servicios que marcan la diferencia. La satisfacción del cliente es nuestra mejor recompensa.
+    En el corazón de nuestra empresa está nuestro equipo apasionado. Cada miembro aporta habilidades únicas y una mentalidad positiva a nuestro trabajo diario.</p>
 {% endblock main %}
+
