--- a/Proyecto4/templates/inicio/About.html
+++ b/Proyecto4/templates/inicio/About.html
@@ -14,5 +14,9 @@ About
     Fundada en 20XX, nuestra empresa ha crecido y evolucionado, pero nuestro compromiso con la satisfacción del cliente sigue siendo nuestra máxima prioridad.
     Nos enorgullece ofrecer productos y servicios que marcan la diferencia. La satisfacción del cliente es nuestra mejor recompensa.
     En el corazón de nuestra empresa está nuestro equipo apasionado. Cada miembro aporta habilidades únicas y una mentalidad positiva a nuestro trabajo diario.</p>
+<p> Somos una empresa comprometida con la excelencia y la innovación. Nuestra misión es proporcionar soluciones de alta calidad a nuestros clientes.
+    En nuestro equipo, valoramos la creatividad y la colaboración. Trabajamos juntos para superar desafíos y alcanzar metas comunes.
+    Fundada en 20XX, nuestra empresa ha crecido y evolucionado, pero nuestro compromiso con la satisfacción del cliente sigue siendo nuestra máxima prioridad.        Nos enorgullece ofrecer productos y servicios que marcan la diferencia. La satisfacción del cliente es nuestra mejor recompensa.
+    En el corazón de nuestra empresa está nuestro equipo apasionado. Cada miembro aporta habilidades únicas y una mentalidad positiva a nuestro trabajo diario.</p>    
 {% endblock main %}
 
