--- a/cuentas/templates/cuentas/cambiar_password.html
+++ b/cuentas/templates/cuentas/cambiar_password.html
@@ -1,21 +1,21 @@
 {% extends "base.html" %}
 
 {% block title_head %}
-<title>Login</title>
+<title>Cambiar Password</title>
 {% endblock title_head %}
 
 {% block h1_header %}
-Login
+Cambiar Password
 {% endblock h1_header %}
 
 {% block main %}
 
-<form action={% url "login" %} method="POST">
+<form action={% url "cambiar_password" %} method="POST">
     {% csrf_token %}
     <table>
-        {{formulario_de_login}}
+        {{form}}
     </table>
-    <input type="submit" value="Iniciar Sesion">
+    <input type="submit" value="Cambiar">
 </form>
 
 {% endblock main %}
