--- a/cuentas/templates/cuentas/logout.html
+++ b/cuentas/templates/cuentas/logout.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
 
-{% block title_header %} 
+{% block title_head %}
 <title>Logout</title>
-{% endblock title_header %}
+{% endblock title_head %}
 
 {% block h1_header %}
 Logout
 {% endblock h1_header %}
 
 {% block main %}
-<h5>Cerraste secion con exito!</h5>
+<h3>Cerraste sesion con exito!</h3>
 {% endblock main %}
+
