--- a/cuentas/templates/cuentas/registro.html
+++ b/cuentas/templates/cuentas/registro.html
@@ -13,7 +13,7 @@ Registrate
 <form action={% url "registrarse" %} method="POST">
     {% csrf_token %}
     <table>
-        {{formulario_de_registro}}
+    {{Fregistro}}
     </table>
     <input type="submit" value="Registrarse">
 </form>
