--- a/cuentas/templates/cuentas/editar_perfil.html
+++ b/cuentas/templates/cuentas/editar_perfil.html
@@ -13,7 +13,7 @@ Editar Perfil
 <form action={% url "editar_perfil" %} method="POST" enctype='multipart/form-data'>
     {% csrf_token %}
     <table>
-        {{formulario}}
+        {{Fedit}}
     </table>
     <input type="submit" value="Editar datos">
 </form>
