--- a/Proyecto4/templates/inicio/Frameworks.html
+++ b/Proyecto4/templates/inicio/Frameworks.html
@@ -13,7 +13,7 @@ Frameworks
 
 <a href={% url "CreacionFrameworks" %}> Crear nuevo Framework</a>
 
-<form action="">
+<form action="" method="GET" enctype="multipart/form-data">
     <strong>Nombre:</strong>
     <input type="text" name='nombre'>
     <input type="submit" value="Buscar">
