--- a/Proyecto4/templates/inicio/DetalleFrameworks.html
+++ b/Proyecto4/templates/inicio/DetalleFrameworks.html
@@ -15,6 +15,8 @@ Detalle {{framework.nombre}}
     <li>Nombre: {{framework.nombre}}</li>
     <li>Language: {{framework.languages}}</li>
     <li>Descripcion: {{framework.descripcion}}</li>
+    <li> <img src={{request.Framework.imgFramework.url}} alt="imgFramework" height='80px'></li>
+    <!-- <li> <img src={{request.user.datosextra.avatar.url}} alt="avatar" height='80px'></li> -->
 </ul>
 
 {% endblock main %}
