--- a/Proyecto4/templates/inicio/CreacionFrameworks.html
+++ b/Proyecto4/templates/inicio/CreacionFrameworks.html
@@ -12,7 +12,10 @@ Crear Framework
 <!-- <form action="" method="POST" enctype='multipart/form-data'> -->
 <form action="{% url 'CreacionFrameworks' %}" method="POST" enctype="multipart/form-data">    
     {% csrf_token %}
-    <table>{{formularioFf}}</table>
+    <table>
+        {{formularioFf.media}}
+        {{formularioFf}}
+    </table>
     <input type="submit" value="Crear">
     </form>
 {% endblock main %}
