--- a/cuentas/templates/cuentas/perfil.html
+++ b/cuentas/templates/cuentas/perfil.html
@@ -19,9 +19,13 @@ Bienvenido a tu perfil!
     {% if  perfil.datosextra.biografia %}
         <li>Biografia: {{perfil.datosextra.biografia}}</li>
     {% endif %}
+    {% if perfil.datosextra.deporte_favorito %}
+    <li>{{perfil.datosextra.deporte_favorito}}</li>
+    {% endif %}
     {% if  perfil.datosextra.avatar %}
          <img src={{request.user.datosextra.avatar.url}} alt="avatar" height='80px'>
     {% endif %}
+    
 </ul>
 
 {% endblock main %}
